@@ -91,6 +91,18 @@ Hostname=Zabbix Server
 
 #BufferSize=100
 
+# Maximum number of new lines the agent will 
+# send per second to Zabbix Server or Proxy 
+# processing `log' and `eventlog' active checks.
+# Default value is 100 lines per second.
+# This parameter must be between 1 and 1000.
+# The provided value will be overridden by 
+# the parameter`maxlines', provided in `log'
+# or `eventlog' item key.
+
+#MaxLinesPerSecond=100
+
+
 ############ ADVANCED PARAMETERS #################
 
 # Number of pre-forked instances of zabbix_agentd,
