@@ -1,5 +1,6 @@
 Changes for 1.7.0
 
+ - [DEV-421] added additional parameter `maxlines' to `log[]' and `eventlog[]' checks (Dmitry)
  - [DEV-137] add AIX initscript for agentd by Faustino Ramos (Richlv)
  - [DEV-420] auto-discovery of multiple-IP devices (Sasha)
  - [DEV-419] added support of Basic Authentication for Web monitoring (Dmitry)
